# WzLib

./: .gitignore  CMakeLists.txt  IWzArchive.idl  IWzCanvas.idl  IWzConvex2D.idl  IWzFileSystem.idl  IWzGr2D.idl  IWzGr2DLayer.idl  IWzNameSpace.idl  IWzPackage.idl  IWzProperty.idl  IWzResMan.idl  IWzSeekableArchive.idl  IWzSerialize.idl  IWzShape2D.idl  IWzSound.idl  IWzUOL.idl  IWzVector2D.idl  IWzWritableNameSpace.idl  generate.cpp  main.cpp  process.py
include/: pcom.h  zcomdef.h
include/WzLib/: PCOM.h  pcom.h  zcomdef.h
interface/: CMakeLists.txt  IWzProperty.idl  IWzUOL.idl  IWzVector2D.idl  IWzWritableNameSpace.idl  generate.cpp  process.py
